--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+body {
+  max-width: 50%;
+  margin: 0 auto;
+  background-color: black;
+  color: #9f9;
+}
+
+h1 {
+  font-size: 2em;
+  padding: 1em;
+}
 p {
   font-size: 1.2em;
   line-height: 1.4em;
