--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     flex: 0 1 100vw;
   }
   img {
-    max-width: 30%;
-    max-height: 30%;
+    max-width: 70%;
+    max-height: 70%;
   }
 }
 @media only screen and (min-width: 601px) {
@@ -31,6 +31,10 @@
   img {
     max-width: 50%;
     max-height: 50%;
+  }
+  a:hover {
+    color: black;
+    background-color: #2f2;
   }
 }
 body {
@@ -57,7 +61,6 @@ li {
 a {
   color: #2f2;
 }
-a:hover {
-  color: black;
-  background-color: #2f2;
+a:active {
+  color: #fff;
 }
