--- a/style.css
+++ b/style.css
@@ -25,8 +25,10 @@
     justify-content: top;
     top: 0px;
     left: 0px;
-    width: 300px;
+    width: 24vw;
     height: 100%;
+    border-right: dotted;
+    border-color: #9f9;
   }
   img {
     max-width: 50%;
@@ -37,6 +39,11 @@
     background-color: #2f2;
   }
 }
+img {
+  border: solid;
+  border-radius: 2em;
+  border-color: #2f2;
+}
 body {
   margin: 0 auto;
   background-color: black;
@@ -46,13 +53,14 @@ body {
 .nav-list {
   display: inline-block;
 }
+
 h1 {
   font-size: 2em;
 }
 p,
 a,
 li {
-  font-size: 1.4em;
+  font-size: 1.5em;
   line-height: 1.6em;
 }
 li {
