put all the content on page

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
   body {
     max-width: 80%;
   }
@@ -13,7 +13,7 @@
     max-height: 70%;
   }
 }
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 901px) {
   body {
     max-width: 50%;
   }
@@ -30,8 +30,6 @@
     left: 0px;
     width: 24vw;
     height: 100%;
-    border-right: dotted;
-    border-color: #9f9;
   }
   img {
     max-width: 50%;
@@ -39,13 +37,11 @@
   }
   a:hover {
     color: black;
-    background-color: #2f2;
+    background-color: #9f9;
   }
 }
 img {
-  border: solid;
   border-radius: 2em;
-  border-color: #2f2;
 }
 body {
   margin: 0 auto;
@@ -56,9 +52,13 @@ body {
 .nav-list {
   display: inline-block;
 }
-
 h1 {
-  font-size: 2em;
+  font-size: 3.2em;
+}
+.secondary-header {
+  font-size: 3em;
+  padding-bottom: 1em;
+  padding-top: 5em;
 }
 p,
 a,
@@ -70,7 +70,7 @@ li {
   list-style-type: none;
 }
 a {
-  color: #2f2;
+  color: #9f9;
 }
 a:active {
   color: #fff;
