--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 900px) {
   body {
     max-width: 80%;
+    margin-left: 5vw;
   }
   .container {
     flex: 0 1 100vw;
@@ -9,7 +10,7 @@
     position: fixed;
     margin-left: 0px;
     justify-content: left;
-    top: -2vh;
+    top: -3vh;
     left: -10vw;
     width: 100vw;
     background-color: #000;
@@ -24,8 +25,8 @@
   p,
   a,
   li {
-    font-size: 1em;
-    line-height: 1em;
+    font-size: 1.4em;
+    line-height: 1.5em;
   }
   img {
     max-width: 70%;
@@ -41,7 +42,7 @@
   }
   body {
     margin: 0 auto;
-    max-width: 50%;
+    max-width: 40%;
   }
   .container {
     flex: 0 1 50vw;
@@ -85,12 +86,6 @@ h1 {
   padding-bottom: 1em;
   padding-top: 5em;
 }
-p,
-a,
-li {
-  font-size: 1.5em;
-  line-height: 1.6em;
-}
 li {
   list-style-type: none;
 }
@@ -104,6 +99,7 @@ input {
   font-family: monospace;
   color: #9f9;
   background-color: #000;
-  outline: none;
+  outline: auto;
+  outline-color: #9f9;
   font-size: 1.5em;
 }
