--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@
     line-height: 1.5em;
   }
   img {
-    max-width: 70%;
-    max-height: 70%;
+    max-width: 75%;
+    max-height: 75%;
   }
 }
 @media only screen and (min-width: 901px) {
@@ -59,8 +59,8 @@
     height: 100%;
   }
   img {
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 60%;
+    max-height: 60%;
   }
   a:hover {
     color: black;
@@ -76,6 +76,9 @@ body {
   font-family: monospace;
 }
 .nav-list {
+  display: inline-block;
+}
+.side-by-side {
   display: inline-block;
 }
 h1 {
